common/force-app/main/default/objects/Capital_Demand_Signal__c/Capital_Demand_Signal__c.object-meta.xml
<CustomObject>
    <description>Introducing Capital Demand Signal, a Salesforce object tailored for indicating and capturing monthly capital requirements for property deals. This tool streamlines financial planning by efficiently managing and tracking the precise amount of capital needed each month. With customizable fields and intuitive interfaces, Capital Demand Signal ensures timely and accurate funding allocation for successful property raises.</description>
    <label>Capital Demand Signal</label>
    <nameField>
        <label>Capital Demand Signal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capital Demand Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>