common/force-app/main/default/objects/Capital_Demand_Signal__c/fields/Capital_Amount__c.field-meta.xml
<CustomField>
    <fullName>Capital_Amount__c</fullName>
    <inlineHelpText>This field is used to allocate an amount to the month you&apos;ve seleted.</inlineHelpText>
    <label>Capital Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>