common/force-app/main/default/objects/Capital_Demand_Signal__c/fields/Capital_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Capital_Forecast__c</fullName>
    <label>Capital Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>