common/force-app/main/default/objects/Capital_Demand_Signal__c/fields/Initial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Initial_Reason__c</fullName>
    <inlineHelpText>This field is used to capture the use of funds initially in the Capital Demand</inlineHelpText>
    <label>Initial Reason</label>
    <type>TextArea</type>
</CustomField>