common/force-app/main/default/objects/Capital_Demand_Signal__c/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Capital Demand Signals</relationshipLabel>
    <relationshipName>Capital_Demand_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>