common/force-app/main/default/objects/Capital_Demand_Signal__c/fields/Subsequent_Reason_change__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Reason_change__c</fullName>
    <inlineHelpText>This field is used if the reason for funds or amount has changed.</inlineHelpText>
    <label>Subsequent Reason change</label>
    <type>TextArea</type>
</CustomField>