common/force-app/main/default/objects/Capital_Demand_Signal__c/fields/Year_Required__c.field-meta.xml
<CustomField>
    <fullName>Year_Required__c</fullName>
    <inlineHelpText>This field is used to enter the Year you require the capital to be raised in.</inlineHelpText>
    <label>Year Required</label>
    <length>50</length>
    <type>Text</type>
</CustomField>