common/force-app/main/default/objects/Capital_Demand_Signal__c/recordTypes/Demand.recordType-meta.xml
<RecordType>
    <fullName>Demand</fullName>
    <active>true</active>
    <label>Demand</label>
</RecordType>