common/force-app/main/default/objects/Capital_Demand_Signal__c/recordTypes/Forecast.recordType-meta.xml
<RecordType>
    <fullName>Forecast</fullName>
    <active>true</active>
    <label>Forecast</label>
</RecordType>